css/benjdj6.css
@-webkit-keyframes fadeIn { from { opacity:0; opacity: 1\9; } to { opacity:0.8; } }

@-moz-keyframes fadeIn { from { opacity:0; opacity: 1\9; } to { opacity:0.8; } }

@keyframes fadeIn { from { opacity:0; opacity: 1\9; } to { opacity:0.8; } }

@-webkit-keyframes slowblur { from  { -webkit-filter: blur(0px); } to { -webkit-filter: blur(5px); } }

@-moz-keyframes slowblur { from  { -webkit-filter: blur(0px); } to { -webkit-filter: blur(5px); } }

@keyframes slowblur { from  { -webkit-filter: blur(0px); } to { -webkit-filter: blur(5px); } }


a {
    opacity: 0.8;
    color: #fcf6e3;
}

a p {
    color: transparent;
}

a:hover, a:hover p {
    opacity: 0.6;
    color: #fcf6e3;
    text-decoration: none;
}

.col-md-1, .col-xs-12 {
    text-align: center;
}

body {
    overflow: hidden;
}

.container:before {
    content: "";
    position: fixed;
    left: 0;
    right: 0;
    z-index: -1;
    transform: scale(1.07);
  
    display: block;
    background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('../assets/bg-3.jpg');
    -webkit-background-size: cover;
    background-size: cover;
    background-attachment: fixed;

    width: 100%;
    height: 100%;
    
    -webkit-animation: slowblur 1s ease-in 1s forwards;
    -moz-animation: slowblur 1s ease-in 1s forwards;
    animation: slowblur 1s ease-in 1s forwards;
}

.container {
    color: #fcf6e3;
}

.vcenter {
  min-height: 100%; 
  min-height: 100vh; 

  display: flex;
  align-items: center;
}

h1, h3, p {
    font-family: 'Lato', sans-serif;
    opacity: 0.8;
}

.fade-in {
    opacity:0; 
    -webkit-animation:fadeIn ease-in 1; 
    -moz-animation:fadeIn ease-in 1;
    animation:fadeIn ease-in 1;

    -webkit-animation-fill-mode:forwards; 
    -moz-animation-fill-mode:forwards;
    animation-fill-mode:forwards;

    -webkit-animation-duration: 0.7s;
    -moz-animation-duration: 0.7s;
    animation-duration: 0.7s;
}

.fade-in.first {
-webkit-animation-delay: 0.4s;
-moz-animation-delay: 0.4s;
animation-delay: 0.4s;
}

.fade-in.second {
-webkit-animation-delay: 0.7s;
-moz-animation-delay: 0.7s;
animation-delay: 0.7s;
}

.fade-in.third {
-webkit-animation-delay: 1.0s;
-moz-animation-delay: 1.0s;
animation-delay: 1.0s;
}

.fade-in.fourth {
-webkit-animation-delay: 1.3s;
-moz-animation-delay: 1.3s;
animation-delay: 1.3s;
}

.fade-in.fifth {
-webkit-animation-delay: 1.5s;
-moz-animation-delay: 1.5s;
animation-delay: 1.5s;
}

.fade-in.sixth {
-webkit-animation-delay: 1.6s;
-moz-animation-delay: 1.6s;
animation-delay: 1.6s;
}

